- Replaced bind='grid' by bind='DataControl' width renderingType='grid' - Used a transparent div on top of loading activity instead of disabling inputs/buttons - remove viewNamespace and modelNamespace variables - update KendoPopupMessage to fix an IE bug

--- a/README
+++ b/README
@@ -44,7 +44,7 @@ SDK Usage Examples:
 </head>
 
 <body>
-<section bind="menu" class='menu' id="ExpanzMenu"></section>
+<section bind="menu" class='menu'></section>
 
 	<section bind="activity" name='MyExpanzActivity' activityStyle='MyExpanzStyle' class='container'>
 
