--- a/README
+++ b/README
@@ -1,85 +1,3 @@
-SDK Usage Examples:
+User Documentation
 
-
-***  Login HTML
-
-
-<html>
-<head>
-<script type='text/javascript' src='js/config.js'></script>
-<script type="text/javascript" src="[..]/Expanz-JavaScript-SDK/js/min/expanz.sdk.js"></script>
-</head>
-
-<body>
-	<form bind="login" name="login" class="login" action="javascript:">
-
-		<div name="username" id="username" class="textinput">
-			<input attribute="value" type="text" placeholder="Username" value="cennis" />
-		</div>
-
-		<div name="password" id="password" class="textinput">
-			<input attribute="value" type="password" placeholder="Password" value="1" />
-		</div>
-		<br />
-		<div style="width: 240px;" id="login">
-			<button type='submit' attribute="submit">login</button>
-		</div>
-
-		<div bind="message" type="error" class="error">
-			<span attribute="value"></span>
-		</div>
-	</form>
-</body>
-</html>
-
-
-
-
-***  Activity HTML
-
-<html>
-<head>
-<script type='text/javascript' src='js/config.js'></script>
-<script type="text/javascript" src="[..]/Expanz-JavaScript-SDK/js/min/expanz.sdk.js"></script>
-</head>
-
-<body>
-<section bind="menu" class='menu'></section>
-
-	<section bind="activity" name='MyExpanzActivity' activityStyle='MyExpanzStyle' class='container'>
-
-			<div bind="field" name="field1" class='textinput'>
-				<label attribute="label"></label>
-				<input  type='text' attribute='value' />
-			</div>
-			
-			<div bind="field" name="field2" class='textinput'>
-				<label attribute="label"></label>
-				<input  type='text' attribute='value' />
-			</div>			
-
-			<div bind="method" name="add">
-				<button attribute="submit">add field1 and field2</button>
-			</div>
-			
-			<div bind="field" name="result" class='textinput'>
-				<label attribute="label"></label>
-				<input  type='text' attribute='value' />
-			</div>				
-
-		</div>
-
-		<div style='clear: both' />
-
-		<div bind="message" type="error" class="error">
-			<span attribute="value"></span>
-		</div>
-
-		<div bind="message" type="info" class="info">
-			<span attribute="value"></span>
-		</div>
-
-	</section>
-</body>
-</html>
-
+http://expanz.com/docs/client-technologies/javascript-sdk/
