--- a/README
+++ b/README
@@ -39,7 +39,8 @@ need to configure your Visual Studio to use this path as a package source (go to
 and it will configure the required files under a Scripts folder in your project.
 
 
-Another means to consume the SDK it to directly link to the .js files in your target project as linked files.
+Another means to consume the SDK is to create a virtual folder under your target project that points to the location of this 
+project, enabling you to directly consume the .js files in this project.
 
 
 Outputs
