--- a/README
+++ b/README
@@ -102,3 +102,110 @@ window.config = {
 
 - You'll also need an HTTP Handler to act as a proxy between the client and the ESA web service.
   Instructions to come.
+
+- JavaScript references
+
+  At the top of your HTML pages you will need the following script references. NOTE: The ASP.NET razor engine is being used
+  to send the source files to the client if in debug mode, and the bundled/minified files to the client in release mode.
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore-min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/lib/jquery.cookies.2.2.0.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/lib/jquery.i18n.properties-min-1.0.9.js"></script>
+
+    
+    @if (Context.IsDebuggingEnabled)
+    {
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.collection.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.component.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.factory.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.html.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Bindable.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Field.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.DashboardField.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Method.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.MenuAction.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.ContextMenu.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Login.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Dashboards.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Message.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.MessageCollection.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.Activity.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/expanz.models.ClientMessage.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/data/expanz.models.data.DataControl.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/data/expanz.models.data.Cell.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/data/expanz.models.data.Row.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/models/data/expanz.models.data.Grid.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.net.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/requestBuilder.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/requestBody.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/responseParser.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/ActivityInfo.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/ProcessArea.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/client/GridViewInfo.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.storage.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/menu/AppSiteMenu.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/menu/ProcessAreaMenu.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/menu/ActivityMenu.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.util.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.FieldView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.DataFieldView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.VariantFieldView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.DependantFieldView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.MethodView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.MessagesView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.ContextMenuView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.GridView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.LoginView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.ActivityView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.DataControlView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.CheckboxesView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.RadioButtonsView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.PopupView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.PicklistWindowView.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.UIMessage.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/views/expanz.views.ManuallyClosedPopup.js"></script>
+
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.security.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/expanz/expanz.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/TimeInputAdapter.js"></script>
+    }
+    else
+    {
+    <script type="text/javascript" src="~/Scripts/expanz-sdk-min/expanz-sdk.min.js"></script>
+    }
+
+	
+	If you are using KenoUI in your client application, and want to use the predefined KendoUI adapters, add the
+	following code to your page.
+
+    <script type="text/javascript" src="//da7xgjtj801h2.cloudfront.net/2012.2.913/js/kendo.all.min.js"></script>
+	
+    @if (Context.IsDebuggingEnabled)
+    {
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoComboBoxAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoDropDownListAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoMobileListAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoPanelBarAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoPopupMessage.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoTabStripAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoTreeAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoDatePickerAdapter.js"></script>
+    <script type="text/javascript" src="~/Scripts/expanz-sdk/adapters/KendoTimePickerAdapter.js"></script>
+    }
+    else
+    {
+	<script type="text/javascript" src="~/Scripts/expanz-sdk-min/expanz-kendoui-adapters.min.js"></script>
+	}
